crates/zakura-state/src/service/finalized_state/disk_format/tests/snapshots/explorer_address_meta_raw_data_with_indexer@testnet_1.snap
---
source: crates/zakura-state/src/service/finalized_state/disk_format/tests/snapshot.rs
expression: cf_data
---
[
  KV(
    k: "03ef775f1f997f122a062fff1a2d7443abd1f9c642",
    v: "000000000000000100000100000000010000010000010000",
  ),
]
