crates/zakura-state/src/service/finalized_state/disk_format/tests/snapshots/explorer_balance_order_raw_data_with_indexer@mainnet_1.snap
---
source: crates/zakura-state/src/service/finalized_state/disk_format/tests/snapshot.rs
expression: cf_data
---
[
  KV(
    k: "ffffffffffffcf2b017d46a730d31f97b1930d3368a967c309bd4d136a",
    v: "",
  ),
]
