crates/zakura-state/src/service/finalized_state/disk_format/tests/snapshots/explorer_block_stats_raw_data_with_indexer@mainnet_2.snap
---
source: crates/zakura-state/src/service/finalized_state/disk_format/tests/snapshot.rs
expression: cf_data
---
[
  KV(
    k: "000000",
    v: "0000000008ce3d9731b000c08338455c8a4a6bd05da16e26b11daa1b917184ece80f04009004135800000000010000009c0600000800000000000000312e3030303030300000000000000000000000000000000001000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000001000000000000000100000000000000010000000000000000200000000000000000000000000000000000000000000000000000000000009c060000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000001000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000010000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000",
  ),
  KV(
    k: "000001",
    v: "010000008392336da29773c56b1649ab555156ceb7e700ad7c230ea7a4571c7e22bc0700ac7a13580000000001000000510600000800000000000000312e30303030303000000000000000000000000000000000010000000000000000000000010000000000000024f400000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000024f40000000000000100000000000000010000000000000001000000000000000020000000000000000000000000000000000000000000000000000000000000510600000000000024f4000000000000000000000000000050c30000000000000000000000000000d430000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000024f40000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000010000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000100000000000000000000000000000000000000000000000000000000000000000000000000000024f4000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000",
  ),
  KV(
    k: "000002",
    v: "02000000ed73e297d7c51cb8dc53fc2213d7e2e3f116eb4f26434496fc1926906ca20200ca7a13580000000001000000510600000800000000000000312e3030303030300000000000000000000000000000000001000000000000000000000001000000000000006cdc0200000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000006cdc0200000000000100000000000000010000000000000001000000000000000020000000000000000000000000000000000000000000000000000000000000510600000000000048e80100000000000000000000000000a0860100000000000000000000000000a861000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000048e80100000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000010000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000100000000000000000000000000000000000000000000000000000000000000000000000000000048e8010000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000",
  ),
]
